[package]
name = "luoo"
version = "0.1.0"
authors = ["HuQingyang <i@do.codes>"]

[dependencies]
listenfd = "0.3"
actix = "0.7"
actix-web = "0.7"
bson = "0.13"
mongodb = "0.3"
dotenv = "0.9.0"
futures = "0.1.23"
serde_derive = "1.0.44"
serde = "1.0.44"
serde_json = "1.0.17"
bytes = "0.4.10"
lazy_static = "^1.1.0"
